# netripe

./: CMakeLists.txt  CODE_OF_CONDUCT.md
cmake/: netripeConfig.cmake.in
netripe/: CMakeLists.txt  basedefs.h  socket.cc  socket.h
